--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>copyartifact</artifactId>
     <packaging>hpi</packaging>
     <name>Copy Artifact Plugin</name>
-    <version>1.23-SNAPSHOT</version>
+    <version>1.23-h-1-SNAPSHOT</version>
     <url>http://wiki.hudson-ci.org/display/HUDSON/Copy+Artifact+Plugin</url>
 
     <developers>
@@ -52,9 +52,9 @@
     </reporting>
 
     <scm>
-      <connection>scm:git:git://github.com/jenkinsci/copyartifact-plugin.git</connection>
-      <developerConnection>scm:git:git@github.com:jenkinsci/copyartifact-plugin.git</developerConnection>
-      <url>https://github.com/jenkinsci/copyartifact-plugin</url>
+      <connection>scm:git:git://github.com/hudson3-plugins/copyartifact-plugin.git</connection>
+      <developerConnection>scm:git:git@github.com:hudson3-plugins/copyartifact-plugin.git</developerConnection>
+      <url>https://github.com/hudson3-plugins/copyartifact-plugin</url>
     </scm>
 </project>  
   
